<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="booster.co.nz.fundsinvestinvestigation.fragments.QuestionnaireResultFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:id="@+id/result_description"
        android:textStyle="bold"
        android:fontFamily="Helvetica"
        android:textSize="28sp"
        android:text="@string/score_description" />

    <TextView
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:id="@+id/tv_score"
        android:layout_below="@+id/result_description"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:paddingLeft="10dp"
        android:text="TextView"
        android:textStyle="bold"
        android:fontFamily="Helvetica"
        android:textSize="28sp"
        android:background="@drawable/box_shape"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/investTypeDesc"
        android:layout_below="@+id/tv_score"
        android:layout_alignLeft="@+id/result_description"
        android:layout_marginTop="20dp"
        android:text="@string/invest_description"
        android:textStyle="bold"
        android:fontFamily="Helvetica"
        android:textSize="28sp"/>

    <TextView
        android:text="TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/investTypeDesc"
        android:layout_alignLeft="@+id/result_description"
        android:layout_marginTop="20dp"
        android:id="@+id/investType"
        android:textStyle="bold"
        android:fontFamily="Helvetica"
        android:textSize="28sp"
        android:background="@drawable/box_shape" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/investor"
        android:text="@string/investor"
        android:layout_below="@+id/investType"
        android:layout_alignLeft="@+id/result_description"
        android:layout_marginTop="20dp"
        android:textStyle="bold"
        android:fontFamily="Helvetica"
        android:textSize="28sp"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnShow"
        android:text="@string/show"
        android:textSize="24sp"
        android:fontFamily="Helvetica"
        android:textColor="@color/colorWhite"
        android:background="@color/colorPrimaryDark"
        android:paddingLeft="6dp"
        android:paddingRight="6dp"

        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true" />

</RelativeLayout>
