<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="booster.co.nz.fundsinvestinvestigation.fragments.SubmitFragment">

    <TextView
        android:text="@string/tv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="30dp"
        android:id="@+id/name_label"
        android:textSize="24sp"
        android:fontFamily="Helvetica"
        android:textStyle="bold"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="18"
        android:hint="@string/tv_name"
        android:layout_alignBaseline="@+id/name_label"
        android:layout_toRightOf="@+id/name_label"
        android:layout_toEndOf="@+id/name_label"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginLeft="30dp"
        android:layout_marginStart="30dp"
        android:id="@+id/name" />

    <TextView
        android:text="@string/tv_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/email_label"
        android:layout_below="@+id/name_label"
        android:layout_alignLeft="@+id/name_label"
        android:layout_alignStart = "@+id/name_label"
        android:layout_marginTop="50dp"
        android:textSize="24sp"
        android:fontFamily="Helvetica"
        android:textStyle="bold"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/email"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:hint="@string/tv_email"
        android:layout_alignBaseline="@+id/email_label"
        android:layout_alignLeft="@+id/name"
        android:layout_alignStart="@+id/name"
        android:layout_toRightOf="@+id/email_label"
        android:layout_toEndOf="@+id/email_label"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />


    <TextView
        android:text="@string/tv_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/phone_label"
        android:layout_below="@+id/email_label"
        android:layout_alignLeft="@+id/email_label"
        android:layout_alignStart="@+id/email_label"
        android:layout_marginTop="50dp"
        android:textSize="24sp"
        android:fontFamily="Helvetica"
        android:textStyle="bold"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/phone"
        android:inputType="phone"
        android:ems="10"
        android:hint="@string/tv_phone"
        android:layout_alignBaseline="@+id/phone_label"
        android:layout_alignLeft="@+id/email"
        android:layout_alignStart="@+id/email"
        android:layout_toRightOf="@+id/email_label"
        android:layout_toEndOf="@+id/email_label"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:id="@+id/submit_bt"
        android:layout_below="@+id/phone_label"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:text ="@string/bt_submit"
        android:textSize="24sp"
        android:textStyle="bold"
        android:fontFamily="Helvetica"
        android:textColor="@color/colorWhite"
        android:background="@color/colorPrimaryDark"
        android:paddingLeft="6dp"
        android:paddingRight="6dp"/>

</RelativeLayout>
